--- a/index.html
+++ b/index.html
@@ -56,13 +56,7 @@
             <p>______________________</p>
         </div>
         <p class="para">
-            Nowadays, Everyone is running for money to earn money, 
-            Adults are doing jobs, some are doing 2 - 3 Jobs, some are opening buisnesses, 
-            students are studying to do jobs, open buisnesses to earn money,
-            but here comes a issue with Indian Education System, 
-            students are not becoming financial literate instead a sheep who knows I have to earn money not knowing, 
-            how to save, how to invest, how to divide budgets. Here comes our website explaining every aspect of Financial sector from budget to banks
-            and from banks to stock markets
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi amet asperiores in harum ullam odit illum, assumenda non repellendus sit vero et voluptatibus distinctio nulla aliquam! Adipisci vitae quisquam laborum.
         </p>
     </div>
     <script src="script.js"></script>
