--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <spline-viewer url="https://prod.spline.design/Goe7fZoPTQrVOY8G/scene.splinecode" class="threeD"></spline-viewer>
+
     <nav class="navbar">
         <h1 class="logo">FINANCE</h1>
         <ul class="nav-list">   
@@ -55,10 +57,23 @@
         <div id="lines">
             <p>______________________</p>
         </div>
-        <p class="para">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi amet asperiores in harum ullam odit illum, assumenda non repellendus sit vero et voluptatibus distinctio nulla aliquam! Adipisci vitae quisquam laborum.
-        </p>
+        <div class="introduction">
+            <p class="para">
+                Nowadays, everyone is running after money — adults are busy doing jobs or building businesses, and students are studying hard so they can earn in the future. But while everyone focuses on earning money, very few actually know how to manage it. Becoming financially literate on your own is possible, but it’s a slow and confusing process. Many young people have no idea how to handle the money they’ll earn later in life.
+                That’s where our web app comes in — it’s designed to help you understand how to manage and invest your money wisely, learn about the banking system, and get a clear idea of how taxes work, all in one simple and engaging platform.
+            </p>
+        </div>
+        <spline-viewer url="https://prod.spline.design/5G2oZmT-LqURj3EG/scene.splinecode" class="robo"></spline-viewer>
     </div>
     <script src="script.js"></script>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.93/build/spline-viewer.js"></script>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.93/build/spline-viewer.js"></script>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.93/build/spline-viewer.js"></script>
+
+
+
+
+
+
 </body>
 </html>
