--- a/index.html
+++ b/index.html
@@ -67,6 +67,35 @@
             </p>
         </div>
     </div>
+    <div class="svg-container">
+        <svg width="809" height="1178" viewBox="0 0 809 1178" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M468.337 0.130615C468.337 0.130615 503.378 128.08 468.337 196.131C424.038 282.16 254.67 213.573 248.337 310.131C242.306 402.092 411.837 431.131 431.337 459.131C450.837 487.131 566.469 613.892 664.337 582.131C743.905 556.308 847.959 471.209 791.337 409.631C754.043 369.072 702.097 370.698 651.337 392.131C549.916 434.954 793.451 552.805 752.837 655.131C704.871 775.978 559.506 719.776 431.337 741.631C360.403 753.726 293.799 818.908 248.337 763.131C214.289 721.356 234.982 677.342 248.337 625.131C300.345 421.816 629.066 699.048 715.837 890.131C737.584 938.021 760.395 967.58 752.837 1019.63C744.333 1078.19 711.549 1106.95 664.337 1142.63C557.889 1223.07 455.064 1138.73 323.837 1114.63C225.363 1096.54 161.887 1100.81 75.8371 1049.63C44.2866 1030.86 27.4517 1018.38 0.337067 993.631" stroke="#E92E2E"stroke-width = "10"/>
+        </svg>
+    </div>
+    <div class="card" id="card">
+        <h2>BUDGETING</h2>
+        <h3>_________</h3>
+        <p>1. It's a financial blueprint that helps track income, expenses, savings, and investments</p>
+        <p>2. 50:30:20 rule (50% needs, 30% wants, 20% savings/investment)</p>
+    </div>
+    <div class="card" id="card2">
+        <h2>INVESTING</h2>
+        <h3>_________</h3>
+        <p>1. It's a financial blueprint that helps track income, expenses, savings, and investments</p>
+        <p>2. 50:30:20 rule (50% needs, 30% wants, 20% savings/investment)</p>
+    </div>
+    <div class="card" id="card3">
+        <h2>BANKING</h2>
+        <h3>_________</h3>
+        <p>1. It's a financial blueprint that helps track income, expenses, savings, and investments</p>
+        <p>2. 50:30:20 rule (50% needs, 30% wants, 20% savings/investment)</p>
+    </div>
+    <div class="card" id="card4">
+        <h2>INSURANCE</h2>
+        <h3>_________</h3>
+        <p>1. It's a financial blueprint that helps track income, expenses, savings, and investments</p>
+        <p>2. 50:30:20 rule (50% needs, 30% wants, 20% savings/investment)</p>
+    </div>
     <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.93/build/spline-viewer.js"></script>
 
