--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
         </div>
         <div class="neeraj">
-            <img src="p15.jpg" alt="Neeraj Yadav">
+            <img src="6627869.webp" alt="Neeraj Yadav">
             <div class="box">
                 <h1>Neeraj Yadav</h1>
                 <h6 style="font-family: 'Raleway';">Hi there, I am Neeraj, Co-Owner and Developer of this website. Hope you are enjoying and learning.</h6>
