--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h1 class="typewriter" style="margin: 0 10px;color: red; font-family: 'Ubuntu';" >Inclusion</h1>
             <h1>For all</h1>
         </div>
-        <p>Breaking down barriers and creating equal opportunities for everyone to access financial education and services, regardless of background, location, or circumstance.</p>
+        <p style="font-family: 'Raleway';">Breaking down barriers and creating equal opportunities for everyone to access financial education and services, regardless of background, location, or circumstance.</p>
         <div class="display">
             <div class="box">
                 <h1 style="font-family: 'Ubuntu';">19 Cr</h1>
