--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="menu-bar" >
         <img src="generated-image.png" class="logo" alt="" style="width: 9%;height: 100%;">
         <ul>
-        <li><a href="#" style="font-family: 'Raleway';">FAQs</a></li>
+        <li><a href="#FAQ" style="font-family: 'Raleway';">FAQs</a></li>
         <!-- <li><a href="#" style="font-family: 'Raleway';">About</a></li> -->
         <li>
           <a href="#" style="font-family: 'Raleway';">Resources ▾</a>
