--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
         <li>India's digital payment systems — UPI, NEFT, RTGS, and IMPS — ensure fast, secure transactions.</li>
       </ul>
     </div>
+  </section>
+  
 <section class="hero" id="about">
   <h2>Meet the Minds Behind the Project</h2>
   <p>We’re two passionate individuals dedicated to making finance simple, engaging, and accessible for everyone. Our goal is to help people understand the world of investments and build confidence in managing money wisely.</p>
@@ -140,7 +142,7 @@
     <p>Hi, I am Owner and developer of this website.</p>
   </div>
   <div class="member">
-    <img src="Screenshot 2025-11-08 155508.png" alt="Team Member 2">
+    <img src="image.png" alt="Team Member 2">
     <h3>Neeraj Yadav</h3>
     <p>Hi, I am Co-Owner and developer of this Website</p>
   </div>
