--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
     </div>
   </div>
 
-  <div class="faq-item">
+  <!-- <div class="faq-item">
     <div class="faq-question">Will you provide real-time stock data?</div>
     <div class="faq-answer">
       The platform includes live or simulated data visuals using trusted APIs, so you can understand market trends in a practical and engaging way.
     </div>
-  </div>
+  </div> -->
 
   <div class="faq-item">
     <div class="faq-question">Can I use this on mobile devices?</div>
